--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@tanstack/react-router": "^1.97.1",
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
         "react": "^18.3.1",
@@ -24,6 +25,8 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@tanstack/router-devtools": "^1.97.1",
+        "@tanstack/router-plugin": "^1.97.1",
         "@types/node": "^22.10.6",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
