--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@tanstack/react-query": "^5.64.1",
         "@tanstack/react-router": "^1.97.1",
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router": "^7.1.1",
-        "sass": "^1.83.4"
+        "sass": "^1.83.4",
+        "swiper": "^11.2.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
